// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CdrTabs mounted mounts tabs 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <button
      aria-hidden="true"
      class="cdr-button--primary cdr-button cdr-button--icon-only cdr-button--with-background cdr-tabs__button cdr-tabs__nav-scroll-left"
      tabindex="-1"
      type="button"
    >
      <svg
        class="cdr-icon cdr-icon--inherit-color cdr-button__icon"
        role="presentation"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          href="#caret-left"
          xlink:href="#caret-left"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="cdr-button--primary cdr-button cdr-button--icon-only cdr-button--with-background cdr-tabs__button cdr-tabs__nav-scroll-right"
      tabindex="-1"
      type="button"
    >
      <svg
        class="cdr-icon cdr-icon--inherit-color cdr-button__icon"
        role="presentation"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          href="#caret-right"
          xlink:href="#caret-right"
        />
      </svg>
    </button>
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
        style="left: 0px;"
      />
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  />
</div>
`;

exports[`CdrTabs mounted mounts with cdr-tab-panel children 1`] = `
<div
  class="cdr-tabs"
  style="height: 240px;"
>
  <div
    class="cdr-tabs__gradient-container"
  >
    <button
      aria-hidden="true"
      class="cdr-button--primary cdr-button cdr-button--icon-only cdr-button--with-background cdr-tabs__button cdr-tabs__nav-scroll-left"
      tabindex="-1"
      type="button"
    >
      <svg
        class="cdr-icon cdr-icon--inherit-color cdr-button__icon"
        role="presentation"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          href="#caret-left"
          xlink:href="#caret-left"
        />
      </svg>
    </button>
    <button
      aria-hidden="true"
      class="cdr-button--primary cdr-button cdr-button--icon-only cdr-button--with-background cdr-tabs__button cdr-tabs__nav-scroll-right"
      tabindex="-1"
      type="button"
    >
      <svg
        class="cdr-icon cdr-icon--inherit-color cdr-button__icon"
        role="presentation"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          href="#caret-right"
          xlink:href="#caret-right"
        />
      </svg>
    </button>
    <nav
      class="cdr-tabs__header-container"
    >
      <ol
        class="cdr-tabs__header"
        role="tablist"
        style="left: 0px;"
      >
        <li
          aria-controls="tab-panel-1"
          aria-disabled="false"
          class="cdr-tabs__header-item"
          id="tab-1"
          role="tab"
        >
          <a
            class="cdr-tabs__header-item-label"
            href="#tab-panel-1"
            tabindex="-1"
          >
            tab1
          </a>
        </li>
        <li
          aria-controls="tab-panel-2"
          aria-disabled="false"
          class="cdr-tabs__header-item"
          id="tab-2"
          role="tab"
        >
          <a
            class="cdr-tabs__header-item-label"
            href="#tab-panel-2"
            tabindex="-1"
          >
            tab2
          </a>
        </li>
      </ol>
    </nav>
    <div
      class="cdr-tabs__underline"
      style="transform: translateX(0px); width: 0px;"
    />
  </div>
  <div
    class="cdr-tabs__content-container"
  >
    <div
      aria-hidden="true"
      aria-labelledby="tab-1"
      class="cdr-tab-panel"
      hidden="hidden"
      id="tab-panel-1"
      role="tabpanel"
      tabindex="0"
    />
    <div
      aria-hidden="true"
      aria-labelledby="tab-2"
      class="cdr-tab-panel"
      hidden="hidden"
      id="tab-panel-2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;
